--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.4",
     "express": "^4.17.3",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "uuid": "^8.3.2"
   }
 }
