--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.10.0",
@@ -21,7 +22,9 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.4",
+    "csv-parse": "^5.0.4",
     "express": "^4.17.3",
+    "multer": "^1.4.4",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2"
   }
