--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.10.0",
@@ -25,6 +26,7 @@
     "csv-parse": "^5.0.4",
     "express": "^4.17.3",
     "multer": "^1.4.4",
+    "swagger-ui-express": "^4.3.0",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2"
   }
